+ configure music file (when file is missing random file from Windows folder will be played) + play mp3 file + tray icon ~ some styles for setting form

--- a/src/HDE.Platform/HDE.Platform.csproj
+++ b/src/HDE.Platform/HDE.Platform.csproj
@@ -79,6 +79,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\SerializerHelper.cs" />
     <Compile Include="Services\SettingsService.cs" />
+    <Compile Include="Wpf\ViewModelActionCommand.cs" />
+    <Compile Include="Wpf\ViewModelCommand.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Platform.snk" />
