--- a/src/HDE.Platform/HDE.Platform.csproj
+++ b/src/HDE.Platform/HDE.Platform.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Logging\SimpleFileLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\SerializerHelper.cs" />
+    <Compile Include="Services\ApplicationSingleInstancePerUser.cs" />
     <Compile Include="Services\SettingsService.cs" />
     <Compile Include="Wpf\ViewModelActionCommand.cs" />
     <Compile Include="Wpf\ViewModelCommand.cs" />
