~ game comparison with list of processes is not case sensitive ~ service review: extract thread work logic to base class + sleeping notification from 1 to 7 AM (untested, huh!), game buster can't be stopped from alarms in case its a sleeping time

--- a/src/GameBuster/GameBuster.csproj
+++ b/src/GameBuster/GameBuster.csproj
@@ -104,7 +104,9 @@
     <Compile Include="Controller\FileHelper.cs" />
     <Compile Include="Controller\GameBusterController.cs" />
     <Compile Include="Model\GameBusterSettings.cs" />
+    <Compile Include="Model\SleepingQuotes.cs" />
     <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="Services\PerMinuteJobService.cs" />
     <Compile Include="Services\ProcessHelperService.cs" />
     <Compile Include="Services\SoundService.cs" />
     <Compile Include="Services\GameWatcherService.cs" />
